--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Vido.Parking.Core.Test\packages.config" />
+  <repository path="..\Vido.Parking.Ui.Wpf\packages.config" />
   <repository path="..\Vido.Parking\packages.config" />
 </repositories>
